--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,3 +11,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/ChivGame")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="ChivGameGameModeBase")
 
+[/Script/Engine.PhysicsSettings]
+bEnable2DPhysics=False
+bSimulateAnimPhysicsAfterReset=False
+DefaultGravityZ=0.000000
+
