added music and some tables

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -16,3 +16,7 @@ bEnable2DPhysics=False
 bSimulateAnimPhysicsAfterReset=False
 DefaultGravityZ=0.000000
 
+[/Script/EngineSettings.GameMapsSettings]
+GameDefaultMap=/Game/Levels/MainMenu.MainMenu
+EditorStartupMap=/Game/Levels/MainMenu.MainMenu
+
