--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -79,6 +79,7 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="PauseGame",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=I)
 +AxisMappings=(AxisName="MoveUpAndDown",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveUpAndDown",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveLeftAndRight",Scale=-1.000000,Key=A)
