--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
 			"name": "ChivGame (Debug)",
 			"request": "launch",
 			"preLaunchTask": "ChivGame Win64 Debug Build",
-			"program": "C:\\ChivGame\\Binaries\\Win64\\UE4-Win64-Debug.exe",
+			"program": "C:\\development\\ChivGame\\Binaries\\Win64\\UE4-Win64-Debug.exe",
 			"args": [
 			],
 			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
@@ -18,7 +18,7 @@
 			"name": "ChivGame (DebugGame)",
 			"request": "launch",
 			"preLaunchTask": "ChivGame Win64 DebugGame Build",
-			"program": "C:\\ChivGame\\Binaries\\Win64\\UE4-Win64-DebugGame.exe",
+			"program": "C:\\development\\ChivGame\\Binaries\\Win64\\UE4-Win64-DebugGame.exe",
 			"args": [
 			],
 			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
@@ -31,7 +31,7 @@
 			"name": "ChivGame (Development)",
 			"request": "launch",
 			"preLaunchTask": "ChivGame Win64 Development Build",
-			"program": "C:\\ChivGame\\Binaries\\Win64\\UE4.exe",
+			"program": "C:\\development\\ChivGame\\Binaries\\Win64\\UE4.exe",
 			"args": [
 			],
 			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
@@ -44,7 +44,7 @@
 			"name": "ChivGame (Shipping)",
 			"request": "launch",
 			"preLaunchTask": "ChivGame Win64 Shipping Build",
-			"program": "C:\\ChivGame\\Binaries\\Win64\\UE4-Win64-Shipping.exe",
+			"program": "C:\\development\\ChivGame\\Binaries\\Win64\\UE4-Win64-Shipping.exe",
 			"args": [
 			],
 			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
@@ -57,7 +57,7 @@
 			"name": "ChivGame (Test)",
 			"request": "launch",
 			"preLaunchTask": "ChivGame Win64 Test Build",
-			"program": "C:\\ChivGame\\Binaries\\Win64\\UE4-Win64-Test.exe",
+			"program": "C:\\development\\ChivGame\\Binaries\\Win64\\UE4-Win64-Test.exe",
 			"args": [
 			],
 			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
@@ -72,7 +72,7 @@
 			"preLaunchTask": "ChivGameEditor Win64 Debug Build",
 			"program": "C:\\Program Files\\Epic Games\\UE_4.25\\Engine\\Binaries\\Win64\\UE4Editor-Win64-Debug.exe",
 			"args": [
-				"C:\\ChivGame\\ChivGame.uproject"
+				"C:\\development\\ChivGame\\ChivGame.uproject"
 			],
 			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
 			"stopAtEntry": false,
@@ -86,7 +86,7 @@
 			"preLaunchTask": "ChivGameEditor Win64 DebugGame Build",
 			"program": "C:\\Program Files\\Epic Games\\UE_4.25\\Engine\\Binaries\\Win64\\UE4Editor-Win64-DebugGame.exe",
 			"args": [
-				"C:\\ChivGame\\ChivGame.uproject"
+				"C:\\development\\ChivGame\\ChivGame.uproject"
 			],
 			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
 			"stopAtEntry": false,
@@ -100,7 +100,7 @@
 			"preLaunchTask": "ChivGameEditor Win64 Development Build",
 			"program": "C:\\Program Files\\Epic Games\\UE_4.25\\Engine\\Binaries\\Win64\\UE4Editor.exe",
 			"args": [
-				"C:\\ChivGame\\ChivGame.uproject"
+				"C:\\development\\ChivGame\\ChivGame.uproject"
 			],
 			"cwd": "C:\\Program Files\\Epic Games\\UE_4.25",
 			"stopAtEntry": false,
@@ -117,7 +117,7 @@
 			"args": [
 				"-projectfiles",
 				"-vscode",
-				"-project=\"C:\\ChivGame\\ChivGame.uproject\"",
+				"-project=\"C:\\development\\ChivGame\\ChivGame.uproject\"",
 				"-game",
 				"-engine"
 			],
