--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -87,6 +87,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="SwitchItem",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
 +ActionMappings=(ActionName="SwitchItem",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="SwitchItem",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollUp)
++ActionMappings=(ActionName="PickUpItem",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
 +AxisMappings=(AxisName="MoveUpAndDown",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveUpAndDown",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveLeftAndRight",Scale=-1.000000,Key=A)
