fixed inventory system and got 3 camera prototypes into 1 game

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -19,4 +19,5 @@ DefaultGravityZ=0.000000
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 EditorStartupMap=/Game/Levels/MainMenu.MainMenu
+GameInstanceClass=/Game/GameInstances/UserOptions_GameInstance.UserOptions_GameInstance_C
 
