--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -86,13 +86,13 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="PauseGame",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +ActionMappings=(ActionName="SwitchItem",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
 +ActionMappings=(ActionName="OpenPossibleActions",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
-+ActionMappings=(ActionName="SwitchItem",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="SwitchItem",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollUp)
 +ActionMappings=(ActionName="PickUpItem",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
 +ActionMappings=(ActionName="Consider",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=W)
 +ActionMappings=(ActionName="Speak",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
 +ActionMappings=(ActionName="PickUpOrUse",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
 +ActionMappings=(ActionName="ApplyCurrent",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=D)
++ActionMappings=(ActionName="NextDialogueLine",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +AxisMappings=(AxisName="MoveUpAndDown",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveUpAndDown",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveLeftAndRight",Scale=-1.000000,Key=A)
